[package]
name = "kemtls_provider"
version = "0.1.0"
edition = "2021"

[dependencies]
oqs = { git = "https://github.com/bzted/liboqs-rust.git", branch = "main", features = ["non_portable"] }
rustls = { path = "../rustls"}
log = "0.4.27"
env_logger = "0.11.8"

[features] 
dtls13 = ["rustls/dtls13"]

[[example]]
name = "client"
path = "examples/client.rs"


[[example]]
name = "server"
path = "examples/server.rs"


[[example]]
name = "full_client"
path = "examples/full_client.rs"


[[example]]
name = "full_server"
path = "examples/full_server.rs"


[[example]]
name = "client_psk"
path = "examples/full_client_psk.rs"

[[example]]
name = "server_psk"
path = "examples/full_server_psk.rs"
