[package]
name = "kemtls_provider"
version = "0.1.0"
edition = "2021"

[dependencies]
oqs = { git = "https://github.com/bzted/liboqs-rust.git", branch = "main", features = ["non_portable"] }
rustls = { path = "../rustls"}
log = "0.4.27"
env_logger = "0.11.8"
clap = { version = "4.0", features = ["derive"] }
ring = "0.17.14"
x25519-dalek = "2.0.1"
openssl = { version = "0.10.76", features = ["vendored"] }

[features] 
dtls13 = ["rustls/dtls13"]

[[example]]
name = "kem_c"
path = "examples/kemtls_client.rs"

[[example]]
name = "kem_s"
path = "examples/kemdtls_server.rs"

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "server"
path = "examples/server.rs"

[[example]]
name = "client_psk"
path = "examples/client_psk.rs"

[[example]]
name = "server_psk"
path = "examples/server_psk.rs"
