[package]
name = "kemtls_provider"
version = "0.1.0"
edition = "2021"

[dependencies]
oqs = { git = "https://github.com/bzted/liboqs-rust.git", branch = "main", default-features = false, features = [
        "non_portable",
        "bike",
        "hqc",
        "ml_kem",
        "ntruprime"
    ] }
webpki = {workspace = true, optional = true}
rustls = { path = "../rustls", default-features = false, features = ["std", "log", "ring"]}
log = "0.4.27"
env_logger = { version = "0.11.8", default-features = false }
x25519-dalek = "2.0.1"
openssl = { version = "0.10.76" }
aws-lc-rs = { workspace = true, optional = true}
csv = "1.4.0"

[features] 
dtls13 = ["rustls/dtls13"]
mldsa = ["dep:webpki" , "webpki/aws-lc-rs-unstable", "aws-lc-rs"]

[[example]]
name = "kem_c"
path = "examples/kemtls_client.rs"

[[example]]
name = "kem_s"
path = "examples/kemdtls_server.rs"

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "server"
path = "examples/server.rs"

[[example]]
name = "client_psk"
path = "examples/client_psk.rs"

[[example]]
name = "server_psk"
path = "examples/server_psk.rs"